--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aafernands.github.io/my-app",
+  "homepage": "https://github.com/aafernands/cleaning-business.git",
   "name": "cleaning-company",
   "version": "0.1.0",
   "private": true,
