--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "react-typical": "^0.1.3",
     "tsparticles": "^1.35.2",
     "ui": "^0.2.4",
