--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "emailjs": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "material": "^0.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
