--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aafernands.github.io/cleaning-business",
+  "homepage": "https://intenseshinecleaning.com",
   "name": "cleaning-company",
   "version": "0.1.0",
   "private": true,
