--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-instagram-embed": "^3.0.0",
     "react-material-ui-form-validator": "^3.0.0",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
