--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "material": "^0.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-recaptcha": "^2.1.0",
     "react-instagram-embed": "^3.0.0",
+    "react-material-ui-carousel": "^2.3.5",
     "react-material-ui-form-validator": "^3.0.0",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.5.1",
     "react-swipeable-views": "^0.14.0",
     "react-typical": "^0.1.3",
+    "sass": "^1.43.2",
+    "styled-components": "^5.3.1",
     "tsparticles": "^1.35.2",
     "ui": "^0.2.4",
     "web-vitals": "^1.1.2",
