--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-typical": "^0.1.3",
     "sass": "^1.43.2",
+    "serve": "^14.0.1",
     "styled-components": "^5.3.1",
     "tsparticles": "^1.35.2",
     "ui": "^0.2.4",
